--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
           font-size: 1rem;
           color: gold;
         }
+
+        .icon1{
+          color: white;
+        }
     </style>
 
     <!--font awesome cdn-->
@@ -568,12 +572,53 @@
       </div>
      </section>
 
-
-
-
   </main>
   
 
+  <!--footer section-->
+
+  <footer class="footer bg-[#179800] text-base-content mt-96 p-10 relative">
+
+    <!--uper card-->
+    <div class="lg:flex lg:gap-20 bg-[#EFEBE3] p-10 ml-4 mr-4 rounded-xl absolute bottom-[450px] lg:bottom-56 lg:left-60">
+      <!--image-->
+      <div>
+        <img src="assets/vegetable-busket.png" alt="">
+      </div>
+
+      <!--text area-->
+      <div class="space-y-8 mt-6">
+        <h2 class="text-2xl lg:text-4xl text-green-600 text-center lg:text-black font-bold">Get Grocery News!</h2>
+        <p class="text-center">Exclusive training tips, ticks, product deals and more.</p>
+        <input class="p-5 w-[300px]" type="email" name="email" id="" placeholder="Email Address"> <br>
+        <button class="btn text-center bg-[#179800]">Subscribe</button>
+      </div>
+    </div>
+
+    <aside class="mt-96 lg:mt-60">
+      <img src="assets/logo-footer.png" alt="">
+      <p class="text-gray-300">
+        Discover a world of treats, toys, and <br> essentials handpicked for your furry friends
+      </p>
+    </aside>
+    <nav class="text-xl text-white lg:mt-60">
+      <a class="link link-hover">Product</a>
+      <a class="link link-hover">Service</a>
+      <a class="link link-hover">Contact Us</a>
+    </nav>
+
+    <div class="lg:mt-60 text-white">
+      <h4>Follow Us</h4>
+      <div class="lg:flex icon1 gap-4">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+    </div>
+    
+    
+  </footer>
  
 
 </body>
