update header section title add a hover pulse animation

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!--hero section-->
     <!--hero title-->
     <div class="my-5">
-      <h1 class="text-center text-4xl lg:text-6xl font-bold">
+      <h1 class="text-center text-4xl lg:text-6xl font-bold hover:animate-pulse">
         Freshness <span class="text-green-600"> You Can <br> Count</span> On, Prices <br class="lg:hidden"> You’ll Love!
       </h1>
 
